testsuite/bsc.names/portRenaming/invalidAttrs/prefix/WrongLoc_Interface.bsv

(* prefix = "foo" *)
interface Ifc;
  method Bool start(Bool a, Bool b);
endinterface

